# scfia-lib

./: .gitattributes  .gitignore  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  README.md
src/: debug_indented.rs  elf.rs  lib.rs  scfia.rs  z3_handle.rs
src/asserts/: mod.rs  scfia_assert.rs  scfia_assert_expression.rs
src/expressions/: bool_eq_expression.rs  bool_less_than_signed_expression.rs  bool_less_than_uint_expression.rs  bool_neq_expression.rs  bool_not_expression.rs  bv_add_expression.rs  bv_and_expression.rs  bv_concat_expression.rs  bv_multiply_expression.rs  bv_or_expression.rs  bv_shift_left_logical_expression.rs  bv_shift_right_logical_expression.rs  bv_sign_extend_expression.rs  bv_slice_expression.rs  bv_sub_expression.rs  bv_unsigned_remainder_expression.rs  bv_xor_expression.rs  mod.rs
src/isla/: map_isla_exp_to_transformation_expression.rs  mod.rs
src/memory/: memory32.rs  mod.rs  regions.rs  stable_memory_region.rs  stable_memory_region32.rs  symbolic_volatile_memory_region.rs  volatile_memory_region.rs
src/models/: mod.rs
src/symbols/: mod.rs  scfia_symbol.rs  scfia_symbol_expression.rs  scfia_symbol_manager.rs
src/system_states/: aarch64.rs  mod.rs
src/traits/: ast.rs  bit_vector.rs  bit_vector_expression.rs  bool.rs  expression.rs  mod.rs  symbol.rs
src/transformation_functions/: mod.rs  transformation_function_expression.rs
src/values/: active_value.rs  bit_vector_concrete.rs  bit_vector_symbol.rs  bool_concrete.rs  bool_eq_expression.rs  bool_not_expresssion.rs  bool_signed_less_than_expression.rs  mod.rs  (+41 more)
tests/: lib.rs  mod.rs
(+31 files in other folders)
