[package]
name = "scfia-lib"
version = "0.1.0"
authors = ["Benedikt Radtke <benediktradtke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
isla-lib = { path = "../isla-lib" }
log = "0.4"
xmas-elf = "0.7"
crossbeam = "0.7.3"
bincode = "1.2.1"

[dev-dependencies]
env_logger = "0.8"
